--- a/res/layout/dialeasy.xml
+++ b/res/layout/dialeasy.xml
@@ -2,12 +2,14 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
-    android:layout_height="wrap_content"
-    android:background="#33000000"
+    android:layout_height="fill_parent"
+    android:background="#00ffffff"
     android:orientation="vertical">
     <ImageButton
         android:id="@+id/imagebutton"
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:src="@drawable/toshiyuki"/>
+        android:layout_height="fill_parent"
+        android:padding="0px"
+        android:src="@drawable/masui"
+        android:scaleType="fitXY"/>
 </LinearLayout>
