--- a/template/res/xml/dialeasy_info.xml
+++ b/template/res/xml/dialeasy_info.xml
@@ -4,7 +4,7 @@
     android:minHeight="40dp"
     android:minWidth="40dp"
     android:updatePeriodMillis="0"
-    android:previewImage="@drawable/hankyu"
+    android:previewImage="@drawable/##name##"
     android:initialLayout="@layout/dialeasy"
     android:resizeMode="none">
 </appwidget-provider>
